<resources>
    <!--Textos referentes al activity_main -->
    <string name="app_name">Unilocal</string>
    <string name="txt_busqueda">Nombre lugar</string>
    <string name="txt_registro">Ir al registro</string>
    <string name="txt_login">Ir a login</string>

    <!--Textos referentes al activity_login -->
    <string name="txt_correo">Escriba su correo:</string>
    <string name="txt_password">Escriba su contraseña:</string>
    <string name="txt_iniciar_sesion">Iniciar sesion</string>
    <string name="txt_registrarse">Registrarse</string>
    <string name="txt_password_Forget">¿Olvidaste tu contraseña?</string>
    <string name="txt_titulo_login">Ingresa para acceder a todos los beneficios</string>

    <!-- Textos referentes al activity registro-->
    <string name="txt_user_name">Escriba su nombre</string>
    <string name="txt_nickname">Escriba su nombre de usuario</string>
    <string name="txt_birthday">Escriba su cumpleaños</string>
    <string name="txt_password_confirm">Confirme su contraseña</string>

    <!-- Textos referentes al activity crear lugar -->
    <string name="txt_titulo_lugar">Creta tu nuevo establecimiento</string>
    <string name="txt_place_name">Nombre del lugar</string>
    <string name="txt_place_description">Descripcion del lugar</string>
    <string name="txt_place_phone">Telefono del lugar</string>
    <string name="txt_create_place">Crear lugar</string>
    <string name="txt_address_place">Direccion del lugar</string>

    <!-- Textos de validaciones -->
    <string name="txt_obligatorio">Es obligatorio</string>
    <string name="txt_maximo_caracteres">Maximo son 10 caracteres</string>

    <!-- Textos referentes al activity crear moderador -->
    <string name="txt_crear_moderador">Crear moderador</string>
    <string name="txt_btn_crear">Crear</string>

    <!-- Textos referentes al activity crear moderador -->
    <string name="txt_titulo_comentarios">Comentarios</string>
    <string name="txt_enviar_comentario">Enviar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Textos referentes al activity detalles moderador -->
    <string name="txt_nombre_detalle_mod">Nombre</string>
    <string name="txt_nickname_detalle_mod">Nombre de usuario</string>
    <string name="txt_correo_detalle_mod">Correo</string>
    <string name="txt_ciudad_detalle_mod">Ciudad</string>

    <!-- Textos referentes al activity detalle lugar usaurio -->
    <string name="txt_nombre_detalle_usuario">Nombre</string>
    <string name="txt_horario_detalle_usuario">Horario</string>
    <string name="txt_direccion_detalle_usuario">Direccion</string>
    <string name="txt_telefono_detalle_usuario">Telefono</string>
    <string name="txt_categoria_detalle_usuario">Catergoria</string>
    <string name="txt_descripcion_detalle_usuario">Descripcion</string>
    <string name="txt_guardar_cambios_detalle_usuario">Guardar Cambios</string>
    <string name="abierto">Abierto</string>
    <string name="cerrado">Cerrado</string>
    <string name="ingresar_comentario">Ingrese su comentario</string>
    <string name="txt_nickname_detalles_usuario">Nickname</string>
    <string name="txt_nombre_usuario_detalles_usuario">Nombre</string>
    <string name="txt_correo_usuario_detalles_usuario">Correo</string>
    <string name="txt_fecha_nacimiento_usuario_detalles_usuario">Fecha de nacimiento</string>
    <string name="txt_guardar_cambios_boton_detalles_usuario">Guardar Cambios</string>
    <string name="txt_descripcion_fragment_info_place">Descipcion del lugar</string>
    <string name="txt_direccion_fragment_info_place">Direccion</string>
    <string name="txt_ciudad_detalles_mod">Ciudad</string>
    <string name="btn_fltrar_categories">Filtrar</string>
    <string name="txt_categoria_Categories">Categoria</string>
    <string name="txt_nombre_lugar_detalle_lugar">Nombre del lugar</string>
    <string name="txt_titulo_registro">Crea tu cuenta</string>
    <string name="txt_no_hay_comentarios">Aun no hay comentarios</string>
    <string name="txt_nombre_user_nav">Nombre usuario</string>
    <string name="txt_correo_nav">Correo</string>
    <string name="txt_nombre_user_item_comentario">Nombre usuario</string>
    <string name="txt_date_item_comentario">date</string>
    <string name="txt_texto_item_comentario">texto</string>
    <string name="txt_nombre_lugar_item_lugar">Nombre del lugar</string>
    <string name="txt_direccion_item_lugar">Direccion</string>
    <string name="txt_abierto_item_lugar">Abierto</string>
    <string name="txt_horario_item_lugar">Horario</string>
    <string name="txt_nombre_mod_item_mod">Nombre Moderador</string>
    <string name="txt_nickname_item_mod">Nickname</string>
    <string name="txt_correo_item_mod">Correo</string>
    <string name="txt_contrasenas_incorrectas">Las contraseñas no coinciden</string>
    <string name="txt_eliminar_mod">Eliminar moderador</string>
    <string name="txt_eliminar_mod_pregunta">¿Esta seguro de eliminar este moderador?</string>
    <string name="txt_si">SI</string>
    <string name="txt_cancel">Cancel</string>
    <string name="txt_info_lugar">Informacion lugar</string>
    <string name="txt_comentario">Comentarios</string>
    <string name="txt_eliminar_lugar">Eliminar lugar</string>
    <string name="txt_eliminar_lugar_pregunta">¿Esta seguro de eliminar este lugar?</string>
    <string name="txt_datos_erroneos">Los datos ingresados son erroneos, porfavor confirma</string>
    <string name="txt_comentario_enviado">Se ha enviado el comentario</string>
    <string name="txt_advertencia_comentarios">Debe escribir el comentario y seleccionar las estrellas</string>
    <string name="txt_lugar_aceptado">Lugar acpetado</string>
    <string name="txt_lugar_rechazado">Lugar rechazado</string>
    <string name="txt_deshacer">Deshacer</string>
    <string name="txt_aceptar">Aceptar</string>
    <string name="txt_rechazar">Rechazar</string>
    <string name="txt_aceptados">Aceptados</string>
    <string name="txt_rechazados">Rechazados</string>
    <string name="txt_horarios_fragment_info_place">Horarios</string>
    <string name="txt_telefono_fragment_info_place">Telefono</string>

    <!--Textos referentes al menu de la barra de navegacion-->
    <string name="mi_perfil">Mi perfil</string>
    <string name="categorias">Categorias</string>
    <string name="m_s_opciones">Más opciones</string>
    <string name="cambiar_idioma">Cambiar idioma</string>
    <string name="cerrar_sesion">Cerrar sesion</string>

    <!--Textos referentes al dialogo de agregar un nuevo horario-->
    <string name="hora_inicio">Hora inicio</string>
    <string name="hora_cierre">Hora cierre</string>
    <string name="agregar_horario">Agregar horario</string>
    <string name="horario_del_lugar">Horario del lugar</string>
    <string name="lugar_creado_exito">Lugar creado correctamente, este quedara en revision</string>
    <string name="lugar_creado_fallo">Verifique haber rellenado todos los campos</string>
    <string name="lugar_aca">Aqui esta el lugar</string>
    <string name="registro_exitoso">Te has registrado con exito</string>
    <string name="email_enviado">Email enviado</string>
    <string name="email_error">Error</string>
    <string name="no_hay_telefono">No hay teléfono</string>
    <string name="marcador_defecto">Marcador por defecto</string>
    <string name="tomar_foto">Tomar foto</string>
    <string name="seleccionar_archivo">Seleccionar archivo</string>
    <string name="seleccionar_imagen">Seleccionar imagen</string>
    <string name="favoritos">Favoritos</string>
    <string name="inicio">Inicio</string>
    <string name="mis_lugares">Mis lugares</string>
    <string name="pendientes">Pendientes</string>
    <string name="registro">Registro</string>
    <string name="contrasena_detalles_usuario">Contraseña</string>
    <string name="titulo_detalle_lugar">Ingrese su contraseña para confirmar los cambios</string>
    <string name="actualizacion_correcta_det_usu">Se ha actualizado correctamente tu información</string>
    <string name="correo_invalido_det_usu">Correo invalido</string>
    <string name="contraseña_erronea_det_usu">Contraseña equivocada, por favor revisa</string>
    <string name="ingresar_contrasena_det_usu">Ingresa la contraseña para confirmar tus cambios</string>
    <string name="llenar_datos_det_usu">Llene todos los datos</string>
    <string name="recuperar_contrasena">Recupera tu contraeña</string>
    <string name="enviar_correo">Enviar correo</string>
    <string name="correo_no_encontrado">El correo no se encuentra</string>
    <string name="lugar_actualizado">El lugar fue actualizado con exito</string>
    <string name="campo_vacio">No puede dejar ningun campo sin diligenciar</string>
    <string name="no_cargar_apartado">No se puede cargar este apartado, en el momento, revisa tu conexion</string>
    <string name="datos_erroneos">Los datos son erroneos, porfavor confirma</string>
    <string name="no_internet">No hay internet</string>
    <string name="cooreo_enviado_email">El correo ha sido enviado, revisa tu bandeja de mensajes</string>
    <string name="nueva_imagen">Nueva imagen subida</string>
    <string name="estadisticas">Estadisticas</string>
    <string name="lugares">Lugares</string>
    <string name="cantidad_lugares">Cantidad Lugares</string>
    <string name="numero_lugares">Numero_lugares</string>
    <string name="usuarios">Usuarios</string>
    <string name="cantidad_usuarios">Cantidad Usuarios</string>
    <string name="numero_usuarios">Numero usuarios</string>
    <string name="cantidad_ciudades">Cantidad ciudades</string>
    <string name="numero_ciudades">Numero_ciudades</string>
    <string name="ciudades">Ciudades</string>
    <string name="numero_categorias">Numero categorias</string>
    <string name="cantidad_categorias">Cantidad categorias</string>
    <string name="imagen_correcta">Se ha eliminado esta imagen del lugar</string>
    <string name="lugar_sin_imagen">El lugar no se puede quedar sin al menos una imagen</string>
    <string name="eliminar_imagen">Eliminar imagen</string>

</resources>