<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">
    
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:src="@mipmap/ic_launcher_round"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:inputType="textEmailAddress"
        android:hint="@string/txt_correo" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:inputType="textPassword"
        android:hint="@string/txt_password" />

    <Button
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/txt_iniciar_sesion"></Button>

    <Button
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/txt_registrarse"></Button>

    


</LinearLayout>