<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".activities.RegistroActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:src="@mipmap/ic_launcher_round"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_layout"
        style="@style/til_form">

    <EditText
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fondo_forms"
        android:inputType="text"
        android:hint="@string/txt_user_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nickname_layout"
        style="@style/til_form">

        <EditText
            android:id="@+id/nickname_usuario"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/fondo_forms"
            android:inputType="text"
            android:hint="@string/txt_nickname" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_layout"
        style="@style/til_form">

        <EditText
            android:id="@+id/email_usuario"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/fondo_forms"
            android:inputType="textEmailAddress"
            android:hint="@string/txt_correo" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        style="@style/til_form">

        <EditText
            android:id="@+id/user_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/fondo_forms"
            android:inputType="textPassword"
            android:hint="@string/txt_password" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_registro"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/txt_registrarse"></Button>

</LinearLayout>