<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".activities.RecuperarContrasenaActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:src="@mipmap/ic_launcher_round"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recuperar_contrasena"
        android:textSize="30dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"></TextView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_layout"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        android:layout_width="300dp"
        android:layout_height="70dp"
        app:startIconDrawable="@drawable/ic_baseline_email_24">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/fondo_forms"
            android:inputType="textEmailAddress"
            android:hint="@string/txt_correo"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_enviar_correo"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/color1"
        android:textColor="@color/black"
        android:text="@string/enviar_correo"></Button>

</LinearLayout>