<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view = "http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp"
    card_view:cardElevation="7dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="5dp"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image_moderator"
            android:src="@mipmap/ic_launcher_round"
            android:layout_width="80dp"
            android:layout_height="80dp"/>

        <LinearLayout
            android:layout_width="0dp"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_weight="70">

            <TextView
                android:id="@+id/name_moderator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_nombre_mod_item_mod"
                android:layout_marginBottom="5dp"
                android:textStyle="bold"
                android:textSize="25sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/nickname_moderator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/txt_nickname_item_mod"/>

            <TextView
                android:id="@+id/email_moderator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_correo_item_mod"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>